--- a/Volvo-html/register.html
+++ b/Volvo-html/register.html
@@ -1,104 +1,156 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1" />
     <title>Welcome to The Reverse Project</title>
-    <link href="css/volvo.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+    <link
+      href="css/volvo.css"
+      rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous" />
+  </head>
 
-<body class="greenPattern">
+  <body class="greenPattern">
     <!--main Start-->
     <div class="container-fluid p-0">
+      <div class="cstmContainer">
+        <!--header-->
         <div class="cstmContainer">
-            <!--header-->
-            <div class="cstmContainer">
-                <nav class="navbar navbar-expand-lg left-top">
-                    <div class="container-fluid">
-                        <div class="row w-100">
-                            <div class="col-2 col-md-0">
-                                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                                    aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <!--back arrow-->
-                                <div class="backArrow d-none"></div>
-                            </div>
-                            <div class="col-10 col-md-12">
-                                <a class="navbar-brand" href="#"><img src="images/volvo-logo.png"
-                                        class="volvoLogo" /></a>
-                            </div>
-                        </div>
-                        <div class="offcanvas-lg offcanvas-start flex-grow-1" id="navbarNavAltMarkup">
-                            <div class="cstmHeight">
-                                <div class="menuText d-md-none">Menu</div>
-                                <div class="mt-5 pb-3 d-md-none"></div>
-                                <div class="cstmWhiteBorder d-md-none mt-3"></div>
-                                <div class="navbar-nav">
-                                    <a class="nav-link active" aria-current="page" href="#">
-                                        <div class="aboutReverseIcon active d-md-none"></div>About Reverse Project
-                                    </a>
-                                    <a class="nav-link" href="#">
-                                        <div class="participateIcon d-md-none"></div> How to Participate
-                                    </a>
-                                    <a class="nav-link" href="#">
-                                        <div class="plantationIcon d-md-none"></div> About Plantation Site
-                                    </a>
-                                    <a class="nav-link" href="#">
-                                        <div class="instaPostIcon d-md-none"></div> Instagram Posts
-                                    </a>
-                                    <a class="nav-link" href="#">
-                                        <div class="dwnCertificateIcon d-md-none"></div> Download Certificate
-                                    </a>
-                                    <div class="mt-3 d-md-none"></div>
-                                    <div class="cstmWhiteBorder d-md-none mt-5"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-            <div class="row m-0">
-                <div class="col-12">
-                    <form method="" name="">
-                        <div class="row">
-                            <div class="col-12 col-md-6 text-center">
-                                <input type="text" name="text" placeholder="Full  Name" />
-                            </div>
-                            <div class="col-12 col-md-6 text-center">
-                                <input type="text" name="text" placeholder="Electric Vehicle No." />
-                            </div>
-                            <div class="col-12 col-md-6 text-center">
-                                <input type="text" name="text" placeholder="Kilometers Driven" />
-                            </div>
-                            <div class="col-12 col-md-6 text-center">
-                                <div class="fileInput">
-                                    <label for="file">Upload Photo of Odometer</label>
-                                    <input type="file" id="file" name="text" />
-                                </div>
-                                <div class="uploadFileError">Upload Jpeg and Png Format only</div>
-                            </div>
-                            <div class="col-12 text-center cstmMrgn">
-                                <a href="#" class="submitCTA">Submit</a>
-                                <div class="alreadyRegister mt-4">Already Registered?</div>
-                            </div>
-                        </div>
-                    </form>
+          <nav class="navbar navbar-expand-lg left-top">
+            <div class="container-fluid">
+              <div class="row w-100">
+                <div class="col-2 col-md-0">
+                  <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="offcanvas"
+                    data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <!--back arrow-->
+                  <div class="backArrow d-none"></div>
                 </div>
-                <div class="col-12">
-                    <img src="images/green-patrn-car.png" class="volvoCar" alt="volvo car" />
+                <div class="col-10 col-md-12">
+                  <a
+                    class="navbar-brand"
+                    href="#"
+                    ><img
+                      src="images/volvo-logo.png"
+                      class="volvoLogo"
+                  /></a>
                 </div>
+              </div>
+              <div
+                class="offcanvas-lg offcanvas-start flex-grow-1"
+                id="navbarNavAltMarkup">
+                <div class="cstmHeight">
+                  <div class="menuText d-md-none">Menu</div>
+                  <div class="mt-5 pb-3 d-md-none"></div>
+                  <div class="cstmWhiteBorder d-md-none mt-3"></div>
+                  <div class="navbar-nav">
+                    <a
+                      class="nav-link active"
+                      aria-current="page"
+                      href="#">
+                      <div class="aboutReverseIcon active d-md-none"></div>
+                      About Reverse Project
+                    </a>
+                    <a
+                      class="nav-link"
+                      href="#">
+                      <div class="participateIcon d-md-none"></div>
+                      How to Participate
+                    </a>
+                    <a
+                      class="nav-link"
+                      href="#">
+                      <div class="plantationIcon d-md-none"></div>
+                      About Plantation Site
+                    </a>
+                    <a
+                      class="nav-link"
+                      href="#">
+                      <div class="instaPostIcon d-md-none"></div>
+                      Instagram Posts
+                    </a>
+                    <a
+                      class="nav-link"
+                      href="#">
+                      <div class="dwnCertificateIcon d-md-none"></div>
+                      Download Certificate
+                    </a>
+                    <div class="mt-3 d-md-none"></div>
+                    <div class="cstmWhiteBorder d-md-none mt-5"></div>
+                  </div>
+                </div>
+              </div>
             </div>
+          </nav>
         </div>
+        <div class="row m-0">
+          <div class="col-12">
+            <form
+              method=""
+              name="">
+              <div class="row">
+                <div class="col-12 col-md-6 text-center">
+                  <input
+                    type="text"
+                    name="text"
+                    placeholder="Full  Name" />
+                </div>
+                <div class="col-12 col-md-6 text-center">
+                  <input
+                    type="text"
+                    name="text"
+                    placeholder="Electric Vehicle No." />
+                </div>
+                <div class="col-12 col-md-6 text-center">
+                  <input
+                    type="text"
+                    name="text"
+                    placeholder="Kilometers Driven" />
+                </div>
+                <div class="col-12 col-md-6 text-center">
+                  <div class="fileInput">
+                    <label for="file">Upload Photo of Odometer</label>
+                    <input
+                      type="file"
+                      id="file"
+                      name="text" />
+                  </div>
+                  <div class="uploadFileError">Upload Jpeg and Png Format only</div>
+                </div>
+                <div class="col-12 text-center cstmMrgn">
+                  <a
+                    href="#"
+                    class="submitCTA"
+                    >Submit</a
+                  >
+                  <div class="alreadyRegister mt-4">Already Registered?</div>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- <div class="col-12">
+                    <img src="images/green-patrn-car.png" class="volvoCar" alt="volvo car" />
+                </div> -->
+        </div>
+      </div>
     </div>
     <!--main End-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"></script>
+  </body>
 </html>
